# Kishi-Shell

./: .gitignore  CONTRIBUTING.md  README.md  README.tr.md  ascii-text-art.txt  install.bat  install.sh  kishi_advanced.py  kishi_runner.py  kishiv1.py  kishiv2.py  kishiv3_final.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
kishi/: __init__.py  __main__.py  builtins.py  executor.py  expander.py  job_control.py  lexer.py  main.py  parser.py  state.py  tui_dashboard.py  tui_explorer.py  tui_fuzzy.py  ui.py
tests/: test_builtins.py  test_executor.py  test_expander.py  test_job_control.py  test_lexer.py  test_main.py  test_parser.py  test_tui.py
