[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kishi-shell"
version = "2.0.0.2"
description = "A powerful, highly modular, Python-based modern shell."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.8"
authors = [
    { name = "Ozhan Gebesoglu", email = "ozhan.gebesoglu@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
dependencies = [
    "prompt_toolkit>=3.0.0",
    "psutil>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/ozhangebesoglu/Kishi-Shell"
Repository = "https://github.com/ozhangebesoglu/Kishi-Shell"
Issues = "https://github.com/ozhangebesoglu/Kishi-Shell/issues"

[project.scripts]
kishi = "kishi.main:main"

[tool.setuptools.packages.find]
include = ["kishi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
